--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,7 @@ body {
     position: absolute;
     float: left;
 }
-.score {
+#scoretarget {
 
     width: 20%;
     height: 30%;
@@ -37,17 +37,17 @@ body {
     font-family: 'Audiowide', cursive;
 }
 
-.record {
-    width: 50%;
+#record {
+    width: 40%;
     height: 30%;
     margin: 10px;
     padding: 90px;
     background: #00cccc;
     color: white;
-    width: 10%;
     /* float: right; */
     font-size: 30px;
     position: absolute;
+    font-family: 'Audiowide', cursive;
 }
 
 .crystals {
@@ -59,7 +59,7 @@ body {
 
 
 .totalscore {
-    width: 17%;
+    width: 30%;
     height: 20%;
     padding: 30px;
     margin: 450px 0px 0px 10px;
